# plscan

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: _build_wheels.yml  _make_release.yml  _run_linters.yml  build_wheels.yml  pull_request.yml  release.yml
cmake/: docs.py  mod.py  test.pyi  wrap_stubs.py
debug/: script.py
docs/: _paper_figures.ipynb  _trial_barcodes.ipynb  _trial_persistence_pruning.ipynb  advanced_usage.ipynb  api_reference.rst  basic_usage.ipynb  conf.py  demo_computational_performance.ipynb  demo_parameter_sensitivity.ipynb  demo_selection_strategies.ipynb  forests.ipynb  index.rst  local_development.rst  min_size.pkl  mst.npy  notebook.ipynb  persistence.pkl  reference_api.rst  reference_plots.rst  reference_plscan.rst  trial_barcodes.ipynb  using_basic_api.ipynb  using_bi_persistences.ipynb  using_exploration_plots.ipynb  using_multiple_components.ipynb  using_other_distances.ipynb  using_sample_weights.ipynb
docs/_templates/autosummary/: class.rst  module.rst  property.rst
docs/data/audioset/: genres.py  load_records.py
docs/data/elegans/: to_Xy.py
docs/data/newsgroups/: README.md  to_Xy.py
docs/lib/: drawing.py  plotting.py
src/fast_plscan/_api/: CMakeLists.txt
src/plscan/: __init__.py  _api.py  _array.h  _condense_tree.cpp  _condense_tree.h  _condensed_tree.cpp  _distances.cpp  _distances.h  _helpers.py  _labelling.cpp  _labelling.h  _leaf_tree.cpp  _leaf_tree.h  _linkage_tree.cpp  _linkage_tree.h  _persistence_trace.cpp  _persistence_trace.h  _space_tree.cpp  _space_tree.h  _spanning_tree.cpp  _spanning_tree.h  _sparse_graph.cpp  _sparse_graph.h  _threads.cpp  api.py  plots.py  sklearn.py
src/plscan/_api/: bindings.cpp
tests/: checks.py  conftest.py  test_api.py  test_distances.py  test_plots.py  test_sklearn.py  test_space_tree.py
tests/data/: X.npy  X_bool.npy
