[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "plscan"
readme = "README.md"
dynamic = ['version']
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
description = "Persistent Leaf Clustering"
keywords = ["density", "cluster", "clustering", "hierarchical", "persistent"]
authors = [{ name = "Jelmer Bot", email = "jelmerbot@gmail.com" }]
maintainers = [{ name = "Jelmer Bot", email = "jelmerbot@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "numpy>=2,<3",
    "scipy>=1,<2",
    "matplotlib>=3,<4",
    "scikit-learn>=1.6,<2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English",
]

[project.urls]
Documentation = "https://vda-lab.github.io/plscan"
Homepage = "https://github.com/vda-lab/plscan"
Issues = "https://github.com/vda-lab/plscan/issues"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.py-api = "cp312"
wheel.exclude = ["**.h", "**.cpp"]

[tool.setuptools_scm]
write_to = "src/plscan/_version.py"

[tool.cibuildwheel]
build-verbosity = 1
test-command = "pytest {project}/tests"
test-requires = "pytest"
archs = ["auto64"]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
