[build-system]
requires = ["scikit-build-core", "nanobind", "setuptools_scm"]
build-backend = "scikit_build_core.build"

[project]
name = "plscan"
readme = "README.md"
dynamic = ["version"]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
description = "Persistent Leaf Clustering"
keywords = ["density", "cluster", "clustering", "hierarchical", "persistent"]
authors = [{ name = "Jelmer Bot", email = "jelmerbot@gmail.com" }]
maintainers = [{ name = "Jelmer Bot", email = "jelmerbot@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2,<3",
    "scipy>=1,<2",
    "matplotlib>=3,<4",
    "scikit-learn>=1.6,<2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English",
]

[project.optional-dependencies]
tests = ["pytest", "networkx", "pandas"]
docs = ["furo", "sphinx", "pandoc", "nbsphinx", "sphinx-copybutton"]

[project.urls]
Documentation = "https://JelmerBot.github.io/plscan"
Homepage = "https://github.com/JelmerBot/plscan"
Issues = "https://github.com/JelmerBot/plscan/issues"

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
wheel.exclude = ["**.h", "**.cpp", "**/CMakeLists.txt"]
sdist.exclude = [".*", ".*/", "docs/data/", "docs/lib/", "docs/images/"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
write_to = "src/plscan/_version.py"

[tool.cibuildwheel]
test-extras = ["tests"]
test-sources = ["tests"]
test-command = ["pytest ."]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows.environment]
SKBUILD_CMAKE_ARGS = "-T ClangCL"
CXX = "clang-cl"
